force-app/main/default/objects/Financial_Projection__c/Financial_Projection__c.object-meta.xml
<CustomObject>
    <description>Revenue and ROI financial projections for each expansion site, computed by the Agentforce Store Expansion Agent</description>
    <label>Financial Projection</label>
    <nameField>
        <displayFormat>FP-{0000}</displayFormat>
        <label>Projection Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Projections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>