force-app/main/default/objects/Financial_Projection__c/fields/Comparable_Store__c.field-meta.xml
<CustomField>
    <fullName>Comparable_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Comparable Existing Store</label>
    <referenceTo>RetailStore</referenceTo>
    <relationshipLabel>Financial Projections</relationshipLabel>
    <relationshipName>Financial_Projections</relationshipName>
    <type>Lookup</type>
</CustomField>