force-app/main/default/objects/Financial_Projection__c/fields/Expansion_Site__c.field-meta.xml
<CustomField>
    <fullName>Expansion_Site__c</fullName>
    <label>Expansion Site</label>
    <referenceTo>Expansion_Site__c</referenceTo>
    <relationshipLabel>Financial Projections</relationshipLabel>
    <relationshipName>Financial_Projections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>