force-app/main/default/objects/Financial_Projection__c/fields/Monthly_Operating__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Operating__c</fullName>
    <label>Monthly Operating Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>