force-app/main/default/objects/Financial_Projection__c/fields/Monthly_Profit__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Profit__c</fullName>
    <formula>Monthly_Revenue__c - Monthly_Rent__c - Monthly_Operating__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>