force-app/main/default/objects/Financial_Projection__c/fields/Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Revenue__c</fullName>
    <label>Estimated Monthly Revenue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>