force-app/main/default/objects/Financial_Projection__c/fields/Payback_Months__c.field-meta.xml
<CustomField>
    <fullName>Payback_Months__c</fullName>
    <formula>IF(Monthly_Profit__c &gt; 0, ROUND(Setup_Cost__c / Monthly_Profit__c, 0), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payback Period (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>