force-app/main/default/objects/Financial_Projection__c/fields/Projection_Date__c.field-meta.xml
<CustomField>
    <fullName>Projection_Date__c</fullName>
    <label>Projection Date</label>
    <type>Date</type>
</CustomField>