force-app/main/default/objects/Financial_Projection__c/fields/Revenue_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Confidence__c</fullName>
    <label>Revenue Confidence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>